--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           distribution: 'oracle'
           java-version: '25'
-          cache: gradle
+          #cache: gradle
       - name: Grant execute permission for Gradle on linux machine
         run: chmod +x ./gradlew
       - name: Run tests
