--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -12,6 +12,8 @@ jobs:
           distribution: 'oracle'
           java-version: '25'
           #cache: gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v5
       - name: Grant execute permission for Gradle on linux machine
         run: chmod +x ./gradlew
       - name: Run tests
