--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -14,6 +14,8 @@ jobs:
           #cache: gradle
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
+      - name: show files
+        run: ls -a
       - name: Grant execute permission for Gradle on linux machine
         run: chmod +x ./gradlew
       - name: Run tests
